# app/controllers/products_controller.rb
@@ -3,19 +3,16 @@
 class ProductsController < ApplicationController
   before_action :set_product, only: %i[show update destroy]
 
-  # GET /products
   def index
     @products = Product.all
 
     render json: @products
   end
 
-  # GET /products/1
   def show
     render json: @product
   end
 
-  # POST /products
   def create
     @product = Product.new(product_params)
 
@@ -26,7 +23,6 @@ class ProductsController < ApplicationController
     end
   end
 
-  # PATCH/PUT /products/1
   def update
     if @product.update(product_params)
       render json: @product
@@ -35,19 +31,16 @@ class ProductsController < ApplicationController
     end
   end
 
-  # DELETE /products/1
   def destroy
     @product.destroy!
   end
 
   private
 
-  # Use callbacks to share common setup or constraints between actions.
   def set_product
     @product = Product.find(params[:id])
   end
 
-  # Only allow a list of trusted parameters through.
   def product_params
     params.require(:product).permit(:name, :price)
   end
